# simple-http-server

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  clang-tidy-checks.txt  cmake-variants.yaml  index.html  main.cpp
.github/workflows/: ctest.yml
libs/: CMakeLists.txt  DefineSystem.h  ISocket.h  Logger.cpp  Logger.h  PosixSocket.cpp  PosixSocket.h  Request.cpp  Request.h  Response.cpp  Response.h  Server.cpp  Server.h  SocketFactory.cpp  SocketFactory.h  ThreadPool.cpp  Util.h  WindowsSocket.cpp  WindowsSocket.h  util.h
libs/includes/: Directory.h  ISocket.h  Logger.h  PosixSocket.h  Request.h  Response.h  Server.h  SocketFactory.h  ThreadPool.h  Util.h  WindowsSocket.h
libs/sources/: Logger.cpp  PosixSocket.cpp  Request.cpp  Response.cpp  Server.cpp  SocketFactory.cpp  ThreadPool.cpp  WindowsSocket.cpp
tests/: CMakeLists.txt  logger_tests.cpp  posix_socket_test.cpp  request_tests.cpp  response_tests.cpp  server_tests.cpp  socket_test.cpp  socket_tests.cpp
